passage rotues repaired
