# src/api/swagger/openapi.yaml
@@ -375,9 +375,9 @@ paths:
         '404':
           $ref: '#/components/responses/NotFound'
 
-  /passage/{passageId}:
+  /passage/screen/{passageId}:
     put:
-      summary: Update passage details
+      summary: Update screen passage details
       parameters:
         - name: passageId
           in: path
@@ -396,7 +396,7 @@ paths:
         '404':
           $ref: '#/components/responses/NotFound'
     delete:
-      summary: Delete a passage
+      summary: Delete a screen passage
       parameters:
         - name: passageId
           in: path
@@ -409,15 +409,36 @@ paths:
         '404':
           $ref: '#/components/responses/NotFound'
 
-  /passage/{passageId}/open:
+  /passage/screen/{passageId}/open:
     post:
-      summary: Open a passage file in VS Code
+      summary: Open a screen passage file in VS Code
       parameters:
         - name: passageId
           in: path
           required: true
           schema:
             type: string
+      responses:
+        '200':
+          $ref: '#/components/responses/Success'
+        '404':
+          $ref: '#/components/responses/NotFound'
+
+  /passage/screen/{passageId}/setTime:
+    post:
+      summary: Set time for a screen passage
+      parameters:
+        - name: passageId
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SetTimeRequest'
       responses:
         '200':
           $ref: '#/components/responses/Success'
